--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,21 +8,19 @@ android {
         config {
             keyAlias 'android'
             keyPassword 'android'
-            //storeFile file('E:/Amiyo/L_Pesa_Intellij/l-pesa/app/KEY/lpesa.jks')
-            storeFile file('/home/cx-26/Sudipto/AndroidProject/Projects/LPesaProject/l-pesa-android-app/app/KEY/lpesa.jks')
+            //storeFile file('/home/cx-26/Sudipto/AndroidProject/NEW PROJECT/LPesa/l-pesa/app/KEY/lpesa.jks')
             //storeFile file('/home/amiyo/AndroidProject/Office/L-Pesa Intellij/l-pesa/app/KEY/lpesa.jks')
-
             storePassword 'android'
+            storeFile file('/home/cx-26/Sudipto/AndroidProject/NEWPROJECT/l-pesa-android-app/app/KEY/lpesa.jks')
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.app.l_pesa"
         minSdkVersion 21
-        targetSdkVersion 28
-        buildToolsVersion "28.0.3"
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 29
+        versionCode 11
+        versionName "1.0.11"
 
     }
     buildTypes {
@@ -30,61 +28,86 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles 'proguard-rules.pro'
-            debuggable true
+           /* debuggable true*/
             signingConfig signingConfigs.config
-            // proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
             proguardFile '/home/amiyo/AndroidProject/L_Pesa/l-pesa/app/proguard-rules.pro'
             buildConfigField("String", 'AWS_PULL', '"eu-central-1:a50ad0e2-bed2-42dc-a6b1-8f225f37f5f3"')
             buildConfigField("String", 'AWS_BUCKET', '"lpesa-profile-identity-proof"')
+            buildConfigField("String", 'PROFILE_IMAGE_URL', '"https://d2yh190ggw1qg8.cloudfront.net/uploads/personal/"')
+            buildConfigField("String", 'BUSINESS_IMAGE_URL', '"https://d2yh190ggw1qg8.cloudfront.net/uploads/business/"')
+            buildConfigField("String", 'BASE_URL', '"http://api-live.l-pesa.com/v2/"')
+            /* buildConfigField("String", 'BASE_URL', '"http://40.76.68.66/v2/"') //http://20.36.32.60*/
+            buildConfigField("String", 'BASE_URL_DEV', '"http://api-dev.l-pesa.com/v2/"')
 
         }
         build {
-            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable true
             signingConfig signingConfigs.config
-            // proguardFile 'E:/Amiyo/L_Pesa_Intellij/l-pesa/app/proguard-rules.pro'
-            //proguardFile '/home/amiyo/AndroidProject/Office/L_Pesa_Intellij/app/proguard-rules.pro'
             buildConfigField("String", 'AWS_PULL', '"eu-central-1:a50ad0e2-bed2-42dc-a6b1-8f225f37f5f3"')
             buildConfigField("String", 'AWS_BUCKET', '"lpesa-profile-identity-proof"')
+            buildConfigField("String", 'PROFILE_IMAGE_URL', '"https://d2yh190ggw1qg8.cloudfront.net/uploads/personal/"')
+            buildConfigField("String", 'BUSINESS_IMAGE_URL', '"https://d2yh190ggw1qg8.cloudfront.net/uploads/business/"')
+            buildConfigField("String", 'BASE_URL', '"http://api-live.l-pesa.com/v2/"')
+            /* buildConfigField("String", 'BASE_URL', '"http://40.76.68.66/v2/"') //http://20.36.32.60*/
+            buildConfigField("String", 'BASE_URL_DEV', '"http://api-dev.l-pesa.com/v2/"')
 
         }
+
+
     }
-    productFlavors {
+
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
+
+    android {
+        lintOptions {
+            checkReleaseBuilds false
+            // Or, if you prefer, you can continue to check for errors in release builds,
+            // but continue the build even when errors are found:
+            abortOnError false
+        }
+    }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.intuit.sdp:sdp-android:1.0.5'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.exifinterface:exifinterface:1.0.0'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    //implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
-    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
-    implementation 'com.android.support:exifinterface:28.0.0'
-    implementation('com.github.bumptech.glide:glide:4.7.1') {
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar' //0.5.0
+    implementation('com.github.bumptech.glide:glide:4.10.0') {
         exclude group: "com.android.support"
     }
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    implementation 'id.zelory:compressor:2.1.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
-    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
-    implementation 'com.android.support:exifinterface:28.0.0'
-    implementation project(':kprogresshud')
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+' //2.16.1
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+' //2.16.1
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.play:core:1.6.3'
+    implementation 'com.facebook.android:facebook-android-sdk:5.5.1'
+    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    /* implementation 'com.amazonaws:aws-android-sdk-s3:2.13.5'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.13.5'*/
+
+
 }
