--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
             //storeFile file('/home/cx-26/Sudipto/AndroidProject/NEW PROJECT/LPesa/l-pesa/app/KEY/lpesa.jks')
             //storeFile file('/home/amiyo/AndroidProject/Office/L-Pesa Intellij/l-pesa/app/KEY/lpesa.jks')
             storePassword 'android'
-            storeFile file('/home/cx-26/Sudipto/AndroidProject/NEWPROJECT/l-pesa-android-app/app/KEY/lpesa.jks')
+            storeFile file('D:\\AndroidPlusProject\\Codelogicx\\sudiptoproject\\L-pesa Project\\master\\l-pesa-android-app\\app\\KEY\\lpesa.jks')
         }
     }
     compileSdkVersion 29
